fixed text alignment issues

--- a/tailwind/output.scss
+++ b/tailwind/output.scss
@@ -742,10 +742,6 @@ video {
   width: 66.666667%;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .flex-shrink {
   flex-shrink: 1;
 }
@@ -1099,6 +1095,7 @@ p {
 @media (min-width: 1024px) {
   .sect {
     flex-direction: row;
+    text-align: left;
   }
 }
 
@@ -1106,7 +1103,6 @@ p {
   .sect {
     padding-top: 8rem;
     padding-bottom: 8rem;
-    text-align: left;
   }
 }
 
@@ -1172,10 +1168,6 @@ p {
 }
 
 @media (min-width: 1024px) {
-  .lg\:w-1\/2 {
-    width: 50%;
-  }
-
   .lg\:flex-row-reverse {
     flex-direction: row-reverse;
   }
@@ -1197,16 +1189,8 @@ p {
 }
 
 @media (min-width: 1600px) {
-  .xlg\:w-1\/2 {
-    width: 50%;
-  }
-
   .xlg\:w-2\/3 {
     width: 66.666667%;
-  }
-
-  .xlg\:flex-row-reverse {
-    flex-direction: row-reverse;
   }
 
   .xlg\:px-96 {
